--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,10 +1,35 @@
-.settings-panel-container {
+.settings-container {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 15px;
+  right: 15px;
+}
+
+.settings-panel {
+  width: 290px;
+  border-radius: 5px;
+  background: #fff;
+  padding: 10px 15px 10px 15px;
+
+}
+
+.settings-panel-close {
+  text-align: right;
+  margin-bottom: 10px;
+  color: darken(#ddd, 25%);
+
+  span {
+    cursor: pointer;
+  }
+}
+
+.settings-divider {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: lighten(#ddd, 5%);
+  margin-top: 15px;
 }
 
 .settings-panel-open {
-
 
 }
