New notification sounds

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'vendor/normalize';
+@import '../../node_modules/react-select/scss/default';
 @import 'buttons';
 @import 'settings';
 
