--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -8,7 +8,7 @@
   width: 290px;
   border-radius: 5px;
   background: #fff;
-  color: black;
+  color: #333;
   padding: 10px 15px 10px 15px;
 
 }
@@ -23,14 +23,6 @@
   }
 }
 
-.settings-divider {
-  display: block;
-  width: 100%;
-  height: 2px;
-  background: lighten(#ddd, 5%);
-  margin-top: 15px;
-}
-
-.settings-panel-open {
-
+.range-input {
+  outline: none;
 }
