--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -4,6 +4,8 @@
 @import 'buttons';
 @import 'settings';
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600);
+
 // Best-practice CSS
 
 *,
@@ -17,6 +19,7 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .site-container {
