--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,3 +1,9 @@
+.settings-button {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+}
+
 .settings-container {
   position: fixed;
   bottom: 15px;
