--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -2,6 +2,7 @@
 @import 'vendor/normalize';
 @import '../../node_modules/react-select/scss/default';
 @import 'buttons';
+@import 'timer';
 @import 'settings';
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600);
@@ -15,19 +16,16 @@
 }
 
 html, body {
-  margin: 0;
-  padding: 0;
   height: 100%;
   width: 100%;
+  color: #fff;
   font-family: 'Open Sans', sans-serif;
 }
 
 .site-container {
-  position: absolute; top: 0; left: 0; height: 100%; width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #fff;
+  height: 100vh;
+  overflow: hidden;
+  width: 100%;
 }
 
 .bg-red {
@@ -42,11 +40,8 @@ html, body {
   background: #2AC56C;
 }
 
-.navigation, .footer {
-  display: flex;
-  justify-content: space-between;
-}
-
-.site-content {
-  text-align: center;
+.status-text {
+  position: fixed;
+  top: 15px;
+  left: 15px;
 }
